# Medical-Chatbot

./: .gitignore  LICENSE  README.md  app.py  dependency_test.py  main.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.sh  test.py
src/: helper.py
templates/: chat.html
